# AGI-

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  train_world_model.py
.github/workflows/: ci-tests.yml  ci-train-smoke.yml  ci.yml
agi/: __init__.py  action_model.py  agent.py  agent_pro.py  config.py  continual_learner.py  continual_learning.py  coordinator.py  embedding.py  emotion.py  goal_manager.py  goal_manager_v2.py  knowledge_graph.py  learner.py  llm_adapter.py  llm_backends.py  mcts.py  memory.py  meta_learner.py  meta_reasoning.py  meta_reasoning_engine.py  perception_multimodal_advanced.py  perception_v2.py  planner.py  planner_mcts.py  planner_v2.py  reasoner.py  reasoning_engine.py  replay_buffer.py  self_mod_framework.py  self_model_v2.py  self_modification.py  simulator.py  unified_memory.py  utils.py  world_model.py  world_model_nn.py  world_model_v2.py
scripts/: collect_transitions.py
static/: style.css
templates/: chat.html
tests/: test_api_json.py  test_learning_loop.py  test_memory_blend.py  test_memory_integration.py  test_memory_scenarios.py  test_replay.py  test_v10_integration.py  test_v10_modules.py  test_v8_modules.py  test_v9_modules.py  test_world_model.py
tests/fixtures/: transitions_small.npy
